# IC-RAG-Vector

./: .gitignore  README.md  dfx.json  package-lock.json  package.json
backend/: Cargo.toml  backend.did  client.rs  lib.rs
backend/extractor/: mod.rs  pdf_file.rs
backend/vdb/: collection.rs  db.rs  embedding.rs  error.rs  index.rs  memory.rs  mod.rs  retriever.rs
docs/: index.html
frontend/: App.tsx  index.css  index.html  package.json  tsconfig.json  vite.config.js
frontend/components/: Chat.tsx  KnowledgeBase.tsx
frontend/components/auth/: ProtectedRoute.tsx  PublicRoute.tsx
frontend/components/knowledge/: DocumentList.tsx  FileUploader.tsx
frontend/components/layout/: AppLayout.tsx
frontend/pages/: ChatPage.tsx  KnowledgeBasePage.tsx  LandingPage.tsx  SignInPage.tsx
frontend/store/: AuthContext.tsx  authSlice.ts  chatSlice.ts  knowledgeSlice.ts  store.ts
frontend/store/types/: knowledgeTypes.ts
