[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]
path = "lib.rs"

[dependencies]
nalgebra = { version = "0.32.3", default-features = false, features = [
    "libm",
    "alloc",
    "serde-serialize",
    "std",
] }
instant-distance = { git = "https://github.com/elna-ai/instant-distance", version = "0.6.1", features = [
    "serde",
    "serde-big-array",
] }
candid = "0.10"
ic-cdk = "0.17"
ic-cdk-macros = "0.17.1"
serde = "1"
rag-toolchain = "0.1.9"
ic-stable-structures = "0.6.0"
space = { version = "0.17.0", default-features = false, features = ["alloc"] }
thiserror = "1.0.40"
ciborium = "0.2.1"
serde_bytes = "0.11.17"
url = "2.5.4"
